# OSGenome

./: .dockerignore  .env.example  .flake8.cfg  .gitignore  .pre-commit-config.yaml  .uvignore  CACHING.md  CONFIGURATION.md  Dockerfile  Dockerfile.dev  ERROR_HANDLING.md  README.md  REPOSITORY_STRUCTURE.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  mypy.ini  nginx.conf  pyproject.toml  requirements.txt  test_cache.py  test_code_organization.py  test_configuration.py  test_error_handling.py  test_security.py
SNPedia/: DataCrawler.py  GenomeImporter.py  SnpApi.py  __init__.py  app.py  cli.py  data_crawler.py  genome_importer.py  gunicorn_config.py  logger.py  ui.py  utils.py
SNPedia/api/: __init__.py  error_handlers.py  file_routes.py  routes.py  static_routes.py  swagger_routes.py
SNPedia/core/: __init__.py  config.py  exceptions.py  logger.py  metrics.py
SNPedia/css/: README.md  app.css  base.css  components.css  dark-mode.css  kendo.common-material.min.css  kendo.material.min.css  kendo.material.mobile.min.css  responsive.css  table.css  toolbar.css  variables.css
SNPedia/data/: __init__.py  repositories.py
SNPedia/js/: README.md  app-modular.js  app.js  kendo.all.min.js  migrate.js
SNPedia/js/modules/: columnManager.js  dataManager.js  exportManager.js  filterManager.js  tableConfig.js  tableEventHandler.js  themeManager.js  uiManager.js  utils.js
SNPedia/models/: __init__.py  response_models.py  snp_models.py
SNPedia/services/: __init__.py  cache_service.py  crawler_service.py  file_service.py  import_service.py  snp_service.py  statistics_service.py
SNPedia/templates/: snp_resource.html
SNPedia/utils/: __init__.py  cache_manager.py  file_utils.py  security.py  validation.py
docs/: CACHING.md  CONFIGURATION.md  DOCKER.md  DOCSTRING_STYLE_GUIDE.md  ERROR_HANDLING.md  IMPLEMENTATION_STATUS.md  KEYBOARD_SHORTCUTS.md  METRICS.md  Makefile  QUICK_REFERENCE.md  README.md  REPOSITORY_STRUCTURE.md  SECURITY.md  SWAGGER.md  TYPE_HINTS_AND_DOCUMENTATION.md  api_reference.rst  conf.py  index.rst
docs/_static/: custom.css
docs/api/: modules.rst
scripts/: docker-build.sh  generate-docs.sh  type-check.sh
tests/: __init__.py  test_async_crawler.py  test_cache.py  test_code_organization.py  test_configuration.py  test_error_handling.py  test_font_awesome.py  test_keyboard_shortcuts.py  test_metrics.py  test_security.py
