[project]
name = "snpedia"
version = "0.1.0"
description = "SNPedia genome analysis application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "xlrd==2.0.2",
    "Flask==3.1.1",
    "requests==2.32.4",
    "aiohttp==3.10.11",
    "gunicorn==23.0.0",
    "python-dotenv==1.0.1",
    "Werkzeug==3.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["SNPedia"]

[dependency-groups]
dev = []